  User-defined searches are indicated in the help and the qsfind popup with a different color, and in the
  menu with '[local]'
* Modified to display command as tooltip for shortcut on the menu if a name for the shortcut was supplied.  
  This is helpful to see what the actual command is from the shortcuts menu without having to open up localaliases.txt.

Bug Fixes

* Duplicate search function names were not being detected due to an invalid xquery path
* Upcase FORM element were not being detected due to an invalid xquery path


-- What's new for 3.1.3 (September 9, 2002)

Bug Fixes

* aliases.txt - corrected 2 aliases to reflect the change of searches names that occured in v 3.1.1

-- What's new for 3.1.2 (September 8, 2002)

Modified Searches
* bible - renamed to bg (Bible Gateway) to avoid English word "Bible"

Enhancements
* Installer fixed to delete old names for *.xml searches.
* Gg bug fixed where /directory would "stick" and apply to the next gg search.

-- What's new for 3.1.1 beta (September 6, 2002)

New Searches

* walmart - Search WalMart online.
* iep - Internet Encyclopedia of Philosophy (from Andrew Carpenter)
* sep - Stanford Encyclopedia of Philosophy (from Andrew Carpenter)
* encarta - Microsoft Encarta (from Andrew Carpenter)
* ep - Epinions (from Andrew Carpenter)
* wc - Get the time around the world at timeanddate.com (from John Bairen)
* jsexec - Execute a Javascript command
* jsref - Search for Javascript commands reference

Modified Searches

* bible - David Thompson added switches for multiple translations
* msk - added /google switch
* setiq - cosmetic change
* wfb - standardized layout
* short - renamed to msl to avoid English word "short"
* drink - renamed to drinkstreet to avoid English word "drink"
* slash - renamed to sd to avoid English word "slash"
* phone - renamed to anywho to avoid English word "phone"
* chart - renamed to bigchart to avoid English word "chart"
* at - renamed to atech to avoid English word "at"