@@ -117,6 +117,7 @@ Finally, the following are default key bindings.  Some of these can be customize
     document.write("<xml id='localsearch' src='" + localsearchurl + "'></xml>");
 </script>
 
+<script type='text/Jscript' src="helpmenu.js"></script>
 <script type='text/Jscript'>
 
 // catch errors
@@ -768,7 +769,6 @@ if (dopopup)
 <script type='text/Jscript' src="calendar.js"></script>
 <script defer type='text/Jscript' src="defer_tools.js"></script>
 <script defer type='text/Jscript' src="helpbox.js"></script>
-<script defer type='text/Jscript' src="helpmenu.js"></script>
 
 <script type='text/Jscript'>
 // show localized title string
