@@ -37,11 +37,13 @@ Enhancements
   menu with '[local]'
 * Modified to display command as tooltip for shortcut on the menu if a name for the shortcut was supplied.  
   This is helpful to see what the actual command is from the shortcuts menu without having to open up localaliases.txt.
+* Added add-ons and searches to modify the popup menu using calls to registerMenuHook
 
 Bug Fixes
 
 * Duplicate search function names were not being detected due to an invalid xquery path
-* Upcase FORM element were not being detected due to an invalid xquery path
+* Uppercase FORM elements were not being detected due to an invalid xquery path
+* Change search property name from 'menudisplay' to 'aliasmenudisplay'
 
 
 -- What's new for 3.1.3 (September 9, 2002)
